Forgot to checkout in the action

--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -5,7 +5,8 @@ on: [push, pull_request]
 jobs: 
   phpstan: 
     runs-on: ubuntu-latest
-    steps: 
+    steps:
+      - uses: actions/checkout@v2
       - uses: nxtlvlsoftware/pmmp-phpstan-action@4
         with:
           phpstan-config: phpstan.neon.dist
